--- a/.babelrc
+++ b/.babelrc
@@ -8,5 +8,8 @@
     }],
     "stage-2"
   ],
-  "plugins": ["transform-vue-jsx", "transform-runtime"]
+  "plugins": ["transform-vue-jsx", "transform-runtime"/*按需导入iview，现在不用，直接导全部,["import", {
+    "libraryName": "iview",
+    "libraryDirectory": "src/components"
+  }]*/]
 }
